--- a/Report/report.tex
+++ b/Report/report.tex
@@ -23,14 +23,14 @@
 \renewcommand\thesection{\arabic{section}}
 \section{Aim}
 The aim of this assignment is to write Verilog code and testbench for the following combinational gates:
-  \begin{center}\textbf{AND, OR, NOR, NAND, XOR, NOT} and \textbf{XNOR}. \end{center}\\\\
+  \begin{center}\textbf{AND, OR, NOR, NAND, XOR, NOT} and \textbf{XNOR}. \end{center} 
 We also want to write Verilog code and test bench for the following compound combinational circuits.
 \begin{enumerate}
 \item \textbf{Y = AB + CD}
 \item \textbf{Y = (ABC + DE).F}
 \item \textbf{Y = ((A+B')(CD+E))'}
-\end{enumerate} \\
-We will also write their truth table and find the:
+\end{enumerate} 
+We will also write their truth table and find the: 
 \begin{itemize}
 \item RTL Schematics
 \item Area
@@ -45,7 +45,7 @@ For this assignment, we will be using \textbf{Xilinx ISE}, and \textbf{Cadence}.
 \item RTL Schematics
 \item Timing Diagram
 \end{itemize}
-\\ We will generate the following using \textbf{Cadence}:
+ We will generate the following using \textbf{Cadence}:
 \begin{itemize}
 \item Area Report
 \item Power Report
